<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fortyeight_standard_visual_rhythm"
        android:gravity="center_vertical"
        android:layout_marginRight="@dimen/linear_layout_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/linear_layout_top_first_margin"
        android:layout_marginBottom="@dimen/linear_layout_bottom_margin">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/location_place"
                android:layout_marginRight="@dimen/icons_margin"
                android:contentDescription="@string/location_icon">
        </ImageView>

        <Spinner
            android:id="@+id/airports_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium">
        </Spinner>

    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyeight_standard_visual_rhythm"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/linear_layout_horizontal_margin"
            android:layout_marginLeft="@dimen/linear_layout_horizontal_margin"
            android:layout_marginTop="@dimen/linear_layout_top_margin"
            android:layout_marginBottom="@dimen/linear_layout_bottom_last_margin">

        <EditText
                android:id="@+id/flyNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fly_number_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:orientation="horizontal"
        android:background="@color/cyan_android"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fortyeight_standard_visual_rhythm"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="?android:dividerVertical"
            android:dividerPadding="@dimen/divider_padding">

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/discard"
                android:onClick="close_Activity"/>

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/check"
                android:onClick="check_Fly"/>

    </LinearLayout>

</LinearLayout>