<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="privacySettings_launcher">

        <ImageView
                android:src="@android:drawable/ic_lock_lock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">
        </ImageView>

        <TextView
                android:text="@string/privacy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="launch_sendFeedback">
        <!-- android:background="@android:drawable/list_selector_background" THIS IS FOR LOWERS API THAN 11-->

        <ImageView
                android:src="@android:drawable/ic_menu_help"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">
        </ImageView>

        <TextView
                android:text="@string/send_feedback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        <!-- android:background="@android:drawable/list_selector_background" THIS IS FOR LOWERS API THAN 11-->

        <ImageView
                android:src="@android:drawable/ic_menu_mylocation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">
        </ImageView>

        <TextView
                android:text="@string/location_access"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="18sp">
        </TextView>

        <Switch
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
        </Switch>


    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray">
    </LinearLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="logOut_launcher">
        <!-- android:background="@android:drawable/list_selector_background" THIS IS FOR LOWERS API THAN 11-->

        <ImageView
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/logout_icon">
        </ImageView>

        <TextView
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18sp">
        </TextView>

    </LinearLayout>

</LinearLayout>