<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_cyan_to_black">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/card"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fortyeight_standard_visual_rhythm"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Pans Ahorro XXL"
                    android:textSize="@dimen/text_size_medium"
                    android:gravity="center"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/prat_oferta_02"
                android:layout_gravity="center"
                android:adjustViewBounds="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fortyeight_standard_visual_rhythm"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:divider="?android:dividerVertical"
                android:dividerPadding="@dimen/divider_padding">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="?android:borderlessButtonStyle"
                    android:onClick="launch_buyit">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/collections_new_label">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buyit"
                        android:textSize="@dimen/text_size_medium">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/offer_card_1_flip_button"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="?android:borderlessButtonStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/about">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Info"
                        android:textSize="@dimen/text_size_medium">
                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    style="?android:borderlessButtonStyle">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star_off">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="@dimen/text_size_medium">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>